@@ -20,6 +20,8 @@ Changes to Version 1.0-6
   
   o indexplot() can now plot multiple variables (suggestion of Manuel Munoz).
   
+  o Added binnedCounts() for binned frequency distribution of a numeric variable (suggestion of Manuel Munoz).
+  
   o Small bug fixes.
 
 Changes to Version 1.0-5
